obj/y.output
Terminaux inutilisés dans la grammaire

   ERREUR


Grammaire

    0 $accept: all $end

    1 all: programme

    2 programme: DEBUT_PROG corps

    3 corps: liste_declarations liste_instructions
    4      | liste_instructions

    5 liste_declarations: dec1

    6 liste_instructions: DEBUT suite_liste_inst FIN

    7 suite_liste_inst: instruction POINT_VIRGULE
    8                 | suite_liste_inst instruction POINT_VIRGULE

    9 dec1: declaration_type POINT_VIRGULE
   10     | declaration_type POINT_VIRGULE dec1
   11     | dec2

   12 dec2: declaration_variable POINT_VIRGULE
   13     | declaration_variable POINT_VIRGULE dec2
   14     | dec3

   15 dec3: declaration_procedure POINT_VIRGULE
   16     | declaration_fonction POINT_VIRGULE
   17     | declaration_procedure POINT_VIRGULE dec3
   18     | declaration_fonction POINT_VIRGULE dec3

   19 declaration_type: TYPE IDF DEUX_POINTS suite_declaration_type_t
   20                 | TYPE IDF DEUX_POINTS suite_declaration_type_s

   21 suite_declaration_type_s: STRUCT liste_champs FSTRUCT

   22 suite_declaration_type_t: TABLEAU dimension DE nom_type

   23 dimension: CO liste_dimensions CF

   24 liste_dimensions: une_dimension
   25                 | liste_dimensions VIRGULE une_dimension

   26 une_dimension: const_entier DIEZ const_entier

   27 const_entier: CSTE_ENTIERE
   28             | MOINS CSTE_ENTIERE

   29 liste_champs: un_champ
   30             | liste_champs un_champ

   31 un_champ: IDF DEUX_POINTS nom_type POINT_VIRGULE

   32 nom_type: type_simple
   33         | IDF

   34 type_simple: ENTIER
   35            | REEL
   36            | BOOLEEN
   37            | CARACTERE
   38            | CHAINE CO CSTE_ENTIERE CF

   39 declaration_variable: VARIABLE IDF DEUX_POINTS nom_type

   40 $@1: %empty

   41 declaration_procedure: PROCEDURE IDF liste_parametres $@1 corps

   42 $@2: %empty

   43 declaration_fonction: FONCTION IDF liste_parametres RETOURNE nom_type $@2 corps

   44 liste_parametres: %empty
   45                 | PO liste_param PF

   46 liste_param: un_param
   47            | liste_param POINT_VIRGULE un_param

   48 un_param: IDF DEUX_POINTS nom_type

   49 instruction: affectation
   50            | condition
   51            | tant_que
   52            | appel
   53            | VIDE
   54            | RETOURNE resultat_retourne
   55            | lire
   56            | ecrire

   57 lire: READ PO type_simple PF

   58 ecrire: WRITE PO expression PF

   59 resultat_retourne: %empty
   60                  | expression
   61                  | expression_chaine

   62 appel: IDF liste_arguments

   63 liste_arguments: PO PF
   64                | PO liste_args PF

   65 liste_args: un_arg
   66           | liste_args VIRGULE un_arg

   67 un_arg: expression

   68 condition: SI expression ALORS liste_instructions SINON liste_instructions

   69 tant_que: TANT_QUE expression FAIRE liste_instructions

   70 affectation: variable OPAFF expression
   71            | variable OPAFF expression_chaine
   72            | variable plus_moins

   73 variable: variable_idf
   74         | tableau
   75         | variable POINT tableau
   76         | variable POINT variable_idf

   77 variable_idf: IDF

   78 tableau: IDF liste_param_tab

   79 liste_param_tab: CO param_du_tab CF
   80                | liste_param_tab CO param_du_tab CF

   81 param_du_tab: expression
   82             | param_du_tab VIRGULE expression

   83 expression_chaine: expression_chaine PLUS CSTE_CHAINE
   84                  | CSTE_CHAINE

   85 expression: expression_et

   86 expression_et: expression_et ET expression_ou
   87              | expression_ou

   88 expression_ou: expression_ou OU expression_neg
   89              | expression_neg

   90 expression_neg: NON expression_bcn
   91               | expression_bcn

   92 expression_bcn: cste_bool
   93               | expression_cmp
   94               | expression_num

   95 cste_bool: VRAI
   96          | FAUX

   97 expression_cmp: expression_num opcomp expression_num

   98 opcomp: INF
   99       | INFEGAL
  100       | SUP
  101       | SUPEGAL
  102       | EGAL
  103       | DIFF

  104 expression_num: e1

  105 e1: e2
  106   | e1 PLUS e2
  107   | e1 MOINS e2

  108 e2: e3
  109   | e2 MULT e3
  110   | e2 DIV e3

  111 e3: MOINS e4
  112   | e4

  113 e4: PO expression PF
  114   | CSTE_ENTIERE
  115   | CSTE_REEL
  116   | CSTE_CARACTERE
  117   | appel
  118   | e5

  119 e5: variable
  120   | variable plus_moins

  121 plus_moins: INCREMENTE
  122           | DECREMENTE


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
DEBUT_PROG (258) 2
DEBUT (259) 6
FIN (260) 6
POINT_VIRGULE (261) 7 8 9 10 12 13 15 16 17 18 31 47
TYPE (262) 19 20
DEUX_POINTS (263) 19 20 31 39 48
STRUCT (264) 21
FSTRUCT (265) 21
TABLEAU (266) 22
CO (267) 23 38 79 80
CF (268) 23 38 79 80
VIRGULE (269) 25 66 82
POINT (270) 75 76
VARIABLE (271) 39
PROCEDURE (272) 41
FONCTION (273) 43
PO (274) 45 57 58 63 64 113
PF (275) 45 57 58 63 64 113
VIDE (276) 53
TANT_QUE (277) 69
FAIRE (278) 69
OPAFF (279) 70 71
PLUS (280) 83 106
MOINS (281) 28 107 111
DIV (282) 110
MULT (283) 109
VRAI (284) 95
FAUX (285) 96
INF (286) 98
SUP (287) 100
INFEGAL (288) 99
SUPEGAL (289) 101
EGAL (290) 102
DIFF (291) 103
RETOURNE (292) 43 54
SI (293) 68
ALORS (294) 68
SINON (295) 68
ET (296) 86
OU (297) 88
DE (298) 22
INCREMENTE (299) 121
DECREMENTE (300) 122
DIEZ (301) 26
NON (302) 90
READ (303) 57
WRITE (304) 58
ERREUR (305)
CSTE_ENTIERE (306) 27 28 38 114
IDF (307) 19 20 31 33 39 41 43 48 62 77 78
CSTE_CARACTERE (308) 116
CSTE_CHAINE (309) 83 84
ENTIER (310) 34
REEL (311) 35
CHAINE (312) 38
BOOLEEN (313) 36
CARACTERE (314) 37
CSTE_REEL (315) 115


Non-terminaux, suivis des règles où ils apparaissent

$accept (61)
    à gauche: 0
all (62)
    à gauche: 1, à droite: 0
programme (63)
    à gauche: 2, à droite: 1
corps (64)
    à gauche: 3 4, à droite: 2 41 43
liste_declarations (65)
    à gauche: 5, à droite: 3
liste_instructions (66)
    à gauche: 6, à droite: 3 4 68 69
suite_liste_inst (67)
    à gauche: 7 8, à droite: 6 8
dec1 (68)
    à gauche: 9 10 11, à droite: 5 10
dec2 (69)
    à gauche: 12 13 14, à droite: 11 13
dec3 (70)
    à gauche: 15 16 17 18, à droite: 14 17 18
declaration_type (71)
    à gauche: 19 20, à droite: 9 10
suite_declaration_type_s (72)
    à gauche: 21, à droite: 20
suite_declaration_type_t (73)
    à gauche: 22, à droite: 19
dimension (74)
    à gauche: 23, à droite: 22
liste_dimensions (75)
    à gauche: 24 25, à droite: 23 25
une_dimension (76)
    à gauche: 26, à droite: 24 25
const_entier (77)
    à gauche: 27 28, à droite: 26
liste_champs (78)
    à gauche: 29 30, à droite: 21 30
un_champ (79)
    à gauche: 31, à droite: 29 30
nom_type (80)
    à gauche: 32 33, à droite: 22 31 39 43 48
type_simple (81)
    à gauche: 34 35 36 37 38, à droite: 32 57
declaration_variable (82)
    à gauche: 39, à droite: 12 13
declaration_procedure (83)
    à gauche: 41, à droite: 15 17
$@1 (84)
    à gauche: 40, à droite: 41
declaration_fonction (85)
    à gauche: 43, à droite: 16 18
$@2 (86)
    à gauche: 42, à droite: 43
liste_parametres (87)
    à gauche: 44 45, à droite: 41 43
liste_param (88)
    à gauche: 46 47, à droite: 45 47
un_param (89)
    à gauche: 48, à droite: 46 47
instruction (90)
    à gauche: 49 50 51 52 53 54 55 56, à droite: 7 8
lire (91)
    à gauche: 57, à droite: 55
ecrire (92)
    à gauche: 58, à droite: 56
resultat_retourne (93)
    à gauche: 59 60 61, à droite: 54
appel (94)
    à gauche: 62, à droite: 52 117
liste_arguments (95)
    à gauche: 63 64, à droite: 62
liste_args (96)
    à gauche: 65 66, à droite: 64 66
un_arg (97)
    à gauche: 67, à droite: 65 66
condition (98)
    à gauche: 68, à droite: 50
tant_que (99)
    à gauche: 69, à droite: 51
affectation (100)
    à gauche: 70 71 72, à droite: 49
variable (101)
    à gauche: 73 74 75 76, à droite: 70 71 72 75 76 119 120
variable_idf (102)
    à gauche: 77, à droite: 73 76
tableau (103)
    à gauche: 78, à droite: 74 75
liste_param_tab (104)
    à gauche: 79 80, à droite: 78 80
param_du_tab (105)
    à gauche: 81 82, à droite: 79 80 82
expression_chaine (106)
    à gauche: 83 84, à droite: 61 71 83
expression (107)
    à gauche: 85, à droite: 58 60 67 68 69 70 81 82 113
expression_et (108)
    à gauche: 86 87, à droite: 85 86
expression_ou (109)
    à gauche: 88 89, à droite: 86 87 88
expression_neg (110)
    à gauche: 90 91, à droite: 88 89
expression_bcn (111)
    à gauche: 92 93 94, à droite: 90 91
cste_bool (112)
    à gauche: 95 96, à droite: 92
expression_cmp (113)
    à gauche: 97, à droite: 93
opcomp (114)
    à gauche: 98 99 100 101 102 103, à droite: 97
expression_num (115)
    à gauche: 104, à droite: 94 97
e1 (116)
    à gauche: 105 106 107, à droite: 104 106 107
e2 (117)
    à gauche: 108 109 110, à droite: 105 106 107 109 110
e3 (118)
    à gauche: 111 112, à droite: 108 109 110
e4 (119)
    à gauche: 113 114 115 116 117 118, à droite: 111 112
e5 (120)
    à gauche: 119 120, à droite: 118
plus_moins (121)
    à gauche: 121 122, à droite: 72 120


État 0

    0 $accept: . all $end

    DEBUT_PROG  décalage et aller à l'état 1

    all        aller à l'état 2
    programme  aller à l'état 3


État 1

    2 programme: DEBUT_PROG . corps

    DEBUT      décalage et aller à l'état 4
    TYPE       décalage et aller à l'état 5
    VARIABLE   décalage et aller à l'état 6
    PROCEDURE  décalage et aller à l'état 7
    FONCTION   décalage et aller à l'état 8

    corps                  aller à l'état 9
    liste_declarations     aller à l'état 10
    liste_instructions     aller à l'état 11
    dec1                   aller à l'état 12
    dec2                   aller à l'état 13
    dec3                   aller à l'état 14
    declaration_type       aller à l'état 15
    declaration_variable   aller à l'état 16
    declaration_procedure  aller à l'état 17
    declaration_fonction   aller à l'état 18


État 2

    0 $accept: all . $end

    $end  décalage et aller à l'état 19


État 3

    1 all: programme .

    $défaut  réduction par utilisation de la règle 1 (all)


État 4

    6 liste_instructions: DEBUT . suite_liste_inst FIN

    VIDE      décalage et aller à l'état 20
    TANT_QUE  décalage et aller à l'état 21
    RETOURNE  décalage et aller à l'état 22
    SI        décalage et aller à l'état 23
    READ      décalage et aller à l'état 24
    WRITE     décalage et aller à l'état 25
    IDF       décalage et aller à l'état 26

    suite_liste_inst  aller à l'état 27
    instruction       aller à l'état 28
    lire              aller à l'état 29
    ecrire            aller à l'état 30
    appel             aller à l'état 31
    condition         aller à l'état 32
    tant_que          aller à l'état 33
    affectation       aller à l'état 34
    variable          aller à l'état 35
    variable_idf      aller à l'état 36
    tableau           aller à l'état 37


État 5

   19 declaration_type: TYPE . IDF DEUX_POINTS suite_declaration_type_t
   20                 | TYPE . IDF DEUX_POINTS suite_declaration_type_s

    IDF  décalage et aller à l'état 38


État 6

   39 declaration_variable: VARIABLE . IDF DEUX_POINTS nom_type

    IDF  décalage et aller à l'état 39


État 7

   41 declaration_procedure: PROCEDURE . IDF liste_parametres $@1 corps

    IDF  décalage et aller à l'état 40


État 8

   43 declaration_fonction: FONCTION . IDF liste_parametres RETOURNE nom_type $@2 corps

    IDF  décalage et aller à l'état 41


État 9

    2 programme: DEBUT_PROG corps .

    $défaut  réduction par utilisation de la règle 2 (programme)


État 10

    3 corps: liste_declarations . liste_instructions

    DEBUT  décalage et aller à l'état 4

    liste_instructions  aller à l'état 42


État 11

    4 corps: liste_instructions .

    $défaut  réduction par utilisation de la règle 4 (corps)


État 12

    5 liste_declarations: dec1 .

    $défaut  réduction par utilisation de la règle 5 (liste_declarations)


État 13

   11 dec1: dec2 .

    $défaut  réduction par utilisation de la règle 11 (dec1)


État 14

   14 dec2: dec3 .

    $défaut  réduction par utilisation de la règle 14 (dec2)


État 15

    9 dec1: declaration_type . POINT_VIRGULE
   10     | declaration_type . POINT_VIRGULE dec1

    POINT_VIRGULE  décalage et aller à l'état 43


État 16

   12 dec2: declaration_variable . POINT_VIRGULE
   13     | declaration_variable . POINT_VIRGULE dec2

    POINT_VIRGULE  décalage et aller à l'état 44


État 17

   15 dec3: declaration_procedure . POINT_VIRGULE
   17     | declaration_procedure . POINT_VIRGULE dec3

    POINT_VIRGULE  décalage et aller à l'état 45


État 18

   16 dec3: declaration_fonction . POINT_VIRGULE
   18     | declaration_fonction . POINT_VIRGULE dec3

    POINT_VIRGULE  décalage et aller à l'état 46


État 19

    0 $accept: all $end .

    $défaut  accepter


État 20

   53 instruction: VIDE .

    $défaut  réduction par utilisation de la règle 53 (instruction)


État 21

   69 tant_que: TANT_QUE . expression FAIRE liste_instructions

    PO              décalage et aller à l'état 47
    MOINS           décalage et aller à l'état 48
    VRAI            décalage et aller à l'état 49
    FAUX            décalage et aller à l'état 50
    NON             décalage et aller à l'état 51
    CSTE_ENTIERE    décalage et aller à l'état 52
    IDF             décalage et aller à l'état 26
    CSTE_CARACTERE  décalage et aller à l'état 53
    CSTE_REEL       décalage et aller à l'état 54

    appel           aller à l'état 55
    variable        aller à l'état 56
    variable_idf    aller à l'état 36
    tableau         aller à l'état 37
    expression      aller à l'état 57
    expression_et   aller à l'état 58
    expression_ou   aller à l'état 59
    expression_neg  aller à l'état 60
    expression_bcn  aller à l'état 61
    cste_bool       aller à l'état 62
    expression_cmp  aller à l'état 63
    expression_num  aller à l'état 64
    e1              aller à l'état 65
    e2              aller à l'état 66
    e3              aller à l'état 67
    e4              aller à l'état 68
    e5              aller à l'état 69


État 22

   54 instruction: RETOURNE . resultat_retourne

    PO              décalage et aller à l'état 47
    MOINS           décalage et aller à l'état 48
    VRAI            décalage et aller à l'état 49
    FAUX            décalage et aller à l'état 50
    NON             décalage et aller à l'état 51
    CSTE_ENTIERE    décalage et aller à l'état 52
    IDF             décalage et aller à l'état 26
    CSTE_CARACTERE  décalage et aller à l'état 53
    CSTE_CHAINE     décalage et aller à l'état 70
    CSTE_REEL       décalage et aller à l'état 54

    $défaut  réduction par utilisation de la règle 59 (resultat_retourne)

    resultat_retourne  aller à l'état 71
    appel              aller à l'état 55
    variable           aller à l'état 56
    variable_idf       aller à l'état 36
    tableau            aller à l'état 37
    expression_chaine  aller à l'état 72
    expression         aller à l'état 73
    expression_et      aller à l'état 58
    expression_ou      aller à l'état 59
    expression_neg     aller à l'état 60
    expression_bcn     aller à l'état 61
    cste_bool          aller à l'état 62
    expression_cmp     aller à l'état 63
    expression_num     aller à l'état 64
    e1                 aller à l'état 65
    e2                 aller à l'état 66
    e3                 aller à l'état 67
    e4                 aller à l'état 68
    e5                 aller à l'état 69


État 23

   68 condition: SI . expression ALORS liste_instructions SINON liste_instructions

    PO              décalage et aller à l'état 47
    MOINS           décalage et aller à l'état 48
    VRAI            décalage et aller à l'état 49
    FAUX            décalage et aller à l'état 50
    NON             décalage et aller à l'état 51
    CSTE_ENTIERE    décalage et aller à l'état 52
    IDF             décalage et aller à l'état 26
    CSTE_CARACTERE  décalage et aller à l'état 53
    CSTE_REEL       décalage et aller à l'état 54

    appel           aller à l'état 55
    variable        aller à l'état 56
    variable_idf    aller à l'état 36
    tableau         aller à l'état 37
    expression      aller à l'état 74
    expression_et   aller à l'état 58
    expression_ou   aller à l'état 59
    expression_neg  aller à l'état 60
    expression_bcn  aller à l'état 61
    cste_bool       aller à l'état 62
    expression_cmp  aller à l'état 63
    expression_num  aller à l'état 64
    e1              aller à l'état 65
    e2              aller à l'état 66
    e3              aller à l'état 67
    e4              aller à l'état 68
    e5              aller à l'état 69


État 24

   57 lire: READ . PO type_simple PF

    PO  décalage et aller à l'état 75


État 25

   58 ecrire: WRITE . PO expression PF

    PO  décalage et aller à l'état 76


État 26

   62 appel: IDF . liste_arguments
   77 variable_idf: IDF .
   78 tableau: IDF . liste_param_tab

    CO  décalage et aller à l'état 77
    PO  décalage et aller à l'état 78

    $défaut  réduction par utilisation de la règle 77 (variable_idf)

    liste_arguments  aller à l'état 79
    liste_param_tab  aller à l'état 80


État 27

    6 liste_instructions: DEBUT suite_liste_inst . FIN
    8 suite_liste_inst: suite_liste_inst . instruction POINT_VIRGULE

    FIN       décalage et aller à l'état 81
    VIDE      décalage et aller à l'état 20
    TANT_QUE  décalage et aller à l'état 21
    RETOURNE  décalage et aller à l'état 22
    SI        décalage et aller à l'état 23
    READ      décalage et aller à l'état 24
    WRITE     décalage et aller à l'état 25
    IDF       décalage et aller à l'état 26

    instruction   aller à l'état 82
    lire          aller à l'état 29
    ecrire        aller à l'état 30
    appel         aller à l'état 31
    condition     aller à l'état 32
    tant_que      aller à l'état 33
    affectation   aller à l'état 34
    variable      aller à l'état 35
    variable_idf  aller à l'état 36
    tableau       aller à l'état 37


État 28

    7 suite_liste_inst: instruction . POINT_VIRGULE

    POINT_VIRGULE  décalage et aller à l'état 83


État 29

   55 instruction: lire .

    $défaut  réduction par utilisation de la règle 55 (instruction)


État 30

   56 instruction: ecrire .

    $défaut  réduction par utilisation de la règle 56 (instruction)


État 31

   52 instruction: appel .

    $défaut  réduction par utilisation de la règle 52 (instruction)


État 32

   50 instruction: condition .

    $défaut  réduction par utilisation de la règle 50 (instruction)


État 33

   51 instruction: tant_que .

    $défaut  réduction par utilisation de la règle 51 (instruction)


État 34

   49 instruction: affectation .

    $défaut  réduction par utilisation de la règle 49 (instruction)


État 35

   70 affectation: variable . OPAFF expression
   71            | variable . OPAFF expression_chaine
   72            | variable . plus_moins
   75 variable: variable . POINT tableau
   76         | variable . POINT variable_idf

    POINT       décalage et aller à l'état 84
    OPAFF       décalage et aller à l'état 85
    INCREMENTE  décalage et aller à l'état 86
    DECREMENTE  décalage et aller à l'état 87

    plus_moins  aller à l'état 88


État 36

   73 variable: variable_idf .

    $défaut  réduction par utilisation de la règle 73 (variable)


État 37

   74 variable: tableau .

    $défaut  réduction par utilisation de la règle 74 (variable)


État 38

   19 declaration_type: TYPE IDF . DEUX_POINTS suite_declaration_type_t
   20                 | TYPE IDF . DEUX_POINTS suite_declaration_type_s

    DEUX_POINTS  décalage et aller à l'état 89


État 39

   39 declaration_variable: VARIABLE IDF . DEUX_POINTS nom_type

    DEUX_POINTS  décalage et aller à l'état 90


État 40

   41 declaration_procedure: PROCEDURE IDF . liste_parametres $@1 corps

    PO  décalage et aller à l'état 91

    $défaut  réduction par utilisation de la règle 44 (liste_parametres)

    liste_parametres  aller à l'état 92


État 41

   43 declaration_fonction: FONCTION IDF . liste_parametres RETOURNE nom_type $@2 corps

    PO  décalage et aller à l'état 91
